--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <body>
 
 <header>
-    <a href="#"><img src="https://img.icons8.com/ios-filled/100/ffffff/book.png" alt="Logo"></a>
+    <a href="#"><img src="novalogo.png" alt="Logo"></a>
     <nav id="nav">
         <button id="btn-mobile"><span></span></button>
         <ul>
@@ -239,7 +239,7 @@
 </main>
 
 <footer>
-    <img src="https://img.icons8.com/ios-filled/100/ffffff/book.png" alt="Logo">
+    <img src="novalogo.png" alt="Logo">
     <ul>
         <li><img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png" alt="Facebook"></li>
         <li><img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram"></li>
