--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <body>
 
 <header>
-    <a href="#"><img src="https://img.icons8.com/ios-filled/100/ffffff/library.png" alt="Logo"></a>
+    <a href="#"><img src="novalogo.png" alt="Logo"></a>
     <nav id="nav">
         <button id="btn-mobile"><span></span></button>
         <ul>
@@ -205,9 +205,9 @@
     <div id="carousel">
         <button class="carousel-btn prev">&#10094;</button>
         <div class="carousel-slide">
-            <img src="https://picsum.photos/id/1015/1920/1080" alt="Imagem 1">
-            <img src="https://picsum.photos/id/1016/1920/1080" alt="Imagem 2">
-            <img src="https://picsum.photos/id/1018/1920/1080" alt="Imagem 3">
+            <img src="01.jpg" alt="Imagem 1">
+            <img src="02.jpg" alt="Imagem 2">
+            <img src="03.jpg" alt="Imagem 3">
         </div>
         <button class="carousel-btn next">&#10095;</button>
     </div>
@@ -241,7 +241,7 @@
 </main>
 
 <footer>
-    <img src="https://img.icons8.com/ios-filled/100/ffffff/library.png" alt="Logo">
+    <img src="novalogo.png" alt="Logo">
     <ul>
         <li><img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png" alt="Facebook"></li>
         <li><img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram"></li>
