--- a/index.html
+++ b/index.html
@@ -65,30 +65,34 @@
     }
 
     /* Carrossel centralizado */
-    #carousel{
-        margin:120px auto 50px auto;
-        width:90%;
-        max-width:1200px;
-        position:relative;
-        overflow:hidden;
-        border-radius:25px;
-        box-shadow: 0 0 40px rgba(0,0,0,0.5);
-    }
-    .carousel-slide{
-        display:flex;
-        transition: transform 0.7s ease-in-out;
-    }
-    .carousel-slide img{
-        width:100%;
-        height:500px;
-        object-fit:cover;
-        border-radius:25px;
-        transition: transform 0.5s, box-shadow 0.5s;
-    }
-    .carousel-slide img:hover{
-        transform: scale(1.03);
-        box-shadow: 0 0 50px var(--highlight);
-    }
+   #carousel {
+    margin: 120px auto 50px auto;
+    width: 90%;
+    max-width: 1200px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 25px;
+    box-shadow: 0 0 40px rgba(0,0,0,0.5);
+}
+
+.carousel-slide {
+    display: flex;
+    transition: transform 0.7s ease-in-out;
+}
+
+.carousel-slide img {
+    width: 100%;
+    height: auto; /* Mantém proporção */
+    object-fit: contain; /* Evita cortar a imagem */
+    border-radius: 25px;
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.carousel-slide img:hover {
+    transform: scale(1.03);
+    box-shadow: 0 0 50px var(--highlight);
+}
+
     .carousel-btn{
         position:absolute;
         top:50%;
