--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="hero-grid">
         <div class="hero-card">
           <h2>Bem-vindo à Biblioteca GDias</h2>
-          <p sytle=' text-align: justify;'>Á plataforma da biblioteca do GDIAS! Aqui alunos, professores e funcionários podem acessar, reservar e utilizar os livros com facilidade, além de conferir recursos, suporte e horários em um só lugar.</p>
+          <p sytle="text-align: justify;">Á plataforma da biblioteca do GDIAS! Aqui alunos, professores e funcionários podem acessar, reservar e utilizar os livros com facilidade, além de conferir recursos, suporte e horários em um só lugar.</p>
 
           <div class="cta-row">
             <a href="#services" class="btn btn-primary">Ver serviços</a>
