--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
     @media (max-width:560px){
       .carousel-slide img{max-height:260px}
     }
+
+    p{
+      text-align: justify;}
   </style>
 </head>
 <body>
@@ -162,10 +165,10 @@
       <div class="hero-grid">
         <div class="hero-card">
           <h2>Bem-vindo à Biblioteca GDias</h2>
-          <p sytle="text-align: justify;">Á plataforma da biblioteca do GDIAS! Aqui alunos, professores e funcionários podem acessar, reservar e utilizar os livros com facilidade, além de conferir recursos, suporte e horários em um só lugar.</p>
+          <p>Á plataforma da biblioteca do GDIAS! Aqui alunos, professores e funcionários podem acessar, reservar e utilizar os livros com facilidade, além de conferir recursos, suporte e horários em um só lugar.</p>
 
           <div class="cta-row">
-            <a href="#services" class="btn btn-primary">Ver serviços</a>
+            <a href="#services" class="btn btn-primary">+ Informações</a>
             <a href="#contato" class="btn btn-outline">Fale conosco</a>
           </div>
 
