--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       .carousel-slide img{max-height:260px}
     }
 
-    p{
+    .op{
       text-align: justify;}
   </style>
 </head>
@@ -165,7 +165,7 @@
       <div class="hero-grid">
         <div class="hero-card">
           <h2>Bem-vindo à Biblioteca GDias</h2>
-          <p>Á plataforma da biblioteca do GDIAS! Aqui alunos, professores e funcionários podem acessar, reservar e utilizar os livros com facilidade, além de conferir recursos, suporte e horários em um só lugar.</p>
+          <p class="op">Á plataforma da biblioteca do GDIAS! Aqui alunos, professores e funcionários podem acessar, reservar e utilizar os livros com facilidade, além de conferir recursos, suporte e horários em um só lugar.</p>
 
           <div class="cta-row">
             <a href="#services" class="btn btn-primary">+ Informações</a>
