--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <article class="service" tabindex="0" role="article" aria-label="Calendário">
           <img src="https://img.icons8.com/ios-filled/100/ffcc00/calendar.png" alt="Ícone calendário">
           <h3>Calendário</h3>
-          <p>Agenda de eventos da IP GONÇALVES DIAS.</p>
+          <p>Agenda de eventos da bibliotecaria da UP GONÇALVES DIAS.</p>
         </article>
 
         <article class="service" tabindex="0" role="article" aria-label="Horários">
@@ -253,7 +253,7 @@
     <section id="projetos" style="margin-top:28px">
       <div class="hero-card">
         <h3 style="font-family:'Montserrat',sans-serif">Projetos em destaque</h3>
-        <p class="muted small">Aqui você pode listar projetos com links para páginas de projetos.</p>
+        <p class="muted small">Aqui você pode listar projetos com links para páginas</p>
       </div>
     </section>
 
